--- a/main.html
+++ b/main.html
@@ -6,8 +6,11 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body onresize="getWindowSize()">
 	<!-- the entire body must be written by student -->
+	<div id='sizeInfo'>
+		<h1>Width: <span id='width'></span> and height: <span id='height'></span></h1>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
