--- a/main.html
+++ b/main.html
@@ -8,9 +8,9 @@
 
 <body onresize="getWindowSize()">
 	<!-- the entire body must be written by student -->
-	<div id='sizeInfo'>
-		<h1>Width: <span id='width'></span> and height: <span id='height'></span></h1>
-	</div>
+	 <div id="sizeInfo">
+        <h1>Width: 0 and Height: 0</h1>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
